# cookie-templates

./: LICENSE  README.md
.github/: .gitattributes  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  task.yaml
cpp-exe/: cookiecutter.json
cpp-exe/hooks/: post_gen_project.py
cpp-exe/{{cookiecutter.project_slug}}/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cpp-exe/{{cookiecutter.project_slug}}/_/licenses/: Proprietary
cpp-exe/{{cookiecutter.project_slug}}/_/vscode/: common.code-snippets  settings.json
cpp-exe/{{cookiecutter.project_slug}}/cmake/: CPackConfig.cmake
cpp-exe/{{cookiecutter.project_slug}}/doc/: Doxyfile
cpp-exe/{{cookiecutter.project_slug}}/src/: CMakeLists.txt  {{cookiecutter.project_slug}}.cpp  {{cookiecutter.project_slug}}.hpp  {{cookiecutter.project_slug}}_main.cpp
cpp-exe/{{cookiecutter.project_slug}}/src/logging/: CMakeLists.txt  spdlog_config.cpp  spdlog_config.hpp
cpp-exe/{{cookiecutter.project_slug}}/test/: CMakeLists.txt  {{cookiecutter.project_slug}}.unit.cpp  {{cookiecutter.project_slug}}_tests.cpp
cpp-exe/{{cookiecutter.project_slug}}/test/unit/: CMakeLists.txt  {{cookiecutter.project_slug}}_tests.cpp
cpp-lib/: cookiecutter.json
cpp-lib/hooks/: post_gen_project.py
cpp-lib/{{cookiecutter.project_slug}}/: README.md
cpp-lib/{{cookiecutter.project_slug}}/_/licenses/: BSD-3
cpp-lib/{{cookiecutter.project_slug}}/_/vscode/: settings.json
cpp-lib/{{cookiecutter.project_slug}}/cmake/: CPackConfig.cmake
cpp-lib/{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.hpp
cpp-lib/{{cookiecutter.project_slug}}/src/: CMakeLists.txt  {{cookiecutter.project_slug}}.cpp
cpp-lib/{{cookiecutter.project_slug}}/src/logging/: CMakeLists.txt  init_logging_dynamic.cpp  spdlog_config.cpp
cpp-lib/{{cookiecutter.project_slug}}/test/: CMakeLists.txt  {{cookiecutter.project_slug}}.unit.cpp  {{cookiecutter.project_slug}}_tests.cpp
cpp-lib/{{cookiecutter.project_slug}}/test/unit/: CMakeLists.txt  {{cookiecutter.project_slug}}_tests.cpp
matlab/: cookiecutter.json
matlab/hooks/: post_gen_project.py
matlab/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  add_project_to_path.m  generate_documentation.m
matlab/{{cookiecutter.project_slug}}/_/vscode/: common.code-snippets  matlab-custom.code-snippets
matlab/{{cookiecutter.project_slug}}/src/: main.m
matlab/{{cookiecutter.project_slug}}/src/demo/: simple_add.m
matlab/{{cookiecutter.project_slug}}/test/: run_tests.m
matlab/{{cookiecutter.project_slug}}/test/demo/: tests_demo.m
matlab/{{cookiecutter.project_slug}}/tools/: BaseClass.m  Buffer.m  adapt_path_to_os.m  bin2hex.m  bin2int.m  biterr.m  compose_path_location.m  from_bin_file.m  generate_random_identifier.m  get_UTC_datetime_string.m  get_file_base_path.m  hex2bin.m  hex2int.m  int2bin.m  int2hex.m  load_json_file.m  log4m.m  m_index.m  read_bin_file_chunk.m  to_bin_file.m  update_path.m
poetry-python/: cookiecutter.json
poetry-python/{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
poetry-python/{{cookiecutter.project_slug}}/_/licenses/: MIT
poetry-python/{{cookiecutter.project_slug}}/_/vscode/: tasks.json
python/: cookiecutter.json
python/hooks/: post_gen_project.py
python/{{cookiecutter.project_slug}}/: .bandit  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  README.md  pylintrc  pyproject.toml
python/{{cookiecutter.project_slug}}/_/licenses/: BSD-3  GPL-3
python/{{cookiecutter.project_slug}}/docs/: README.md
