[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
{%- if cookiecutter.license not in ["Propietary"] %}
license="{{cookiecutter.license}}"
{%- endif %}
packages = [{include = "{{cookiecutter.project_slug}}"}]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pep8 = "^1.7.1"
pytest = "^7.1.2"
bandit = "^1.7.4"
black = "^22.6.0"
rope = "^1.3.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
vulture = "^2.5"
pdoc = "^12.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
