[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
{%- if cookiecutter.license not in ["Propietary"] %}
license="{{cookiecutter.license}}"
{%- endif %}
packages = [{include = "{{cookiecutter.project_slug}}"}]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "^1.7.5"}
black = "^22.6.0"
coverage = "^7.2.3"
flake8 = "^6.0.0"
flake8-bugbear = "^23.9.16"
hypothesis = "^6.72.4"
ipython = "^8.12.0"
isort = "^5.12.0"
pdoc = "^12.0.2"
pep8 = "^1.7.1"
pre-commit = "^2.20.0"
pyflakes = "^3.0.1"
pylint = "^3.0.2"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
rope = "^1.3.0"
semgrep = "^1.19.0"
vulture = "^2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
exclude = ["*env*", "docs/*", "tests/*"]
make_whitelist = true
min_confidence = 90
paths = ["{{cookiecutter.project_slug}}"]
sort_by_size = true
verbose = false
